fix(style): style update, visible header, size

--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,9 @@
   background: inherit;
   border-right: 2px solid #ddd;
 }
-
+.tabulator .tabulator-header .tabulator-frozen {
+    background-color: #fff !important;
+}
 /* Alternate Row Colors */
 
 /* Header Styling */
@@ -127,7 +129,7 @@
 .tabulator-header,
 .tabulator-headers,
 .tabulator-col {
-  height: 24px !important;
+  height: 26px !important;
 }
 
 .tabulator-headers {
